fix(review): remove padding on mobile

--- a/src/components/review/style.scss
+++ b/src/components/review/style.scss
@@ -9,8 +9,11 @@
 	box-shadow: compose-shadow($shadow_review);
 
 	&__large {
-		padding-block-start: em($spacing_140);
 		font-size: $size_font_ms_u_1 + em;
+
+		@include breakpoint(m) {
+			padding-block-start: em($spacing_140);
+		}
 
 		#{$root}_avatar {
 			width: em($spacing_140 * 1.5);
